# parallel-programming

tp/Exemples/: CMakeLists.txt  Lisezmoi.txt
tp/Exemples/src/: conditions_for.c  corps_de_boucle.c  forall.c  omp_nested.c  omp_num_threads.c  omp_section.c  omp_task.c  parallel_for.c  spmd.c
tp/tp1/1/Squelette/: CMakeCache.txt  CMakeLists.txt  Lisezmoi.txt  Makefile  cmake_install.cmake
tp/tp1/1/Squelette/src/: barrier.c  count.c  pi.c
tp/tp2/2/Squelette/: CMakeLists.txt  Lisezmoi.txt
tp/tp2/2/Squelette/src/: brute_force.c  matvec_omp_for_i.c  matvec_omp_for_j1.c  matvec_omp_for_j2.c  matvec_omp_for_simd.c  matvec_omp_simd.c  word_gen.c  word_generator.c
tp/tp2/2/Squelette/src/include/: matvec_omp_for_i.h  matvec_omp_for_j1.h  matvec_omp_for_j2.h  matvec_omp_for_simd.h  matvec_omp_simd.h  word_gen.h
tp/tp3/3/Squelette/: CMakeLists.txt  Lisezmoi.txt
tp/tp3/3/Squelette/src/: bench.c  can_put_queen.c  omp_put_queen_v2.c  omp_put_queen_v3.c  omp_solve_n_queens_v1.c  omp_solve_n_queens_v2.c  omp_solve_n_queens_v3.c  put_queen.c  solve_n_queens.c
tp/tp3/3/Squelette/src/include/: can_put_queen.h  omp_put_queen_v2.h  omp_put_queen_v3.h  omp_solve_n_queens_v1.h  omp_solve_n_queens_v2.h  omp_solve_n_queens_v3.h  put_queen.h  solve_n_queens.h
tp/tp4/4/Squelette/: CMakeLists.txt
tp/tp4/4/Squelette/src/: testOddEvenSort.cpp
tp/tp4/4/Squelette/src/include/: merge_n.hpp  oddEvenSort.hpp  ompOddEvenSortV1.hpp  ompOddEvenSortV2.hpp
